fix: Made it center aligned

--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -1,5 +1,7 @@
 .profile {
     background-color: #0C0B0B;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 .profile-container {
@@ -11,7 +13,7 @@
     height: 100%;
     background-color: #090808;
     padding: 2px;
-    border-radius: 30px 30px 0 0;;
+    border-radius: 30px 30px 0 0;
 }
 
 .profile-border {
